updated navbar for shopping cart

--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -22,8 +22,10 @@
 <body class="container">
     <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
         <div id="topnav-centered">
-            <a class="navbar-brand" href="index.html"><img src="images\logo_clr.png" alt="Ontime logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"
+                    style="width:150px;height:60px;" /></a>
         </div>
+
         <section class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -31,7 +33,9 @@
                 <span class="icon-bar"></span>
             </button>
         </section>
-        <section class="collapse navbar-collapse" id="myNavbar">
+
+        <section class="collapse navbar-collapse container-fluid" id="myNavbar">
+
             <ul class="nav navbar-nav">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
@@ -52,8 +56,11 @@
                 <li><a href="productsreview.html">Reviews</a></li>
                 <li><a href="aboutus.html">About us</a></li>
             </ul>
+
+
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="login.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
         </section>
     </nav>
@@ -140,7 +147,7 @@
         <form>
             <input type="radio" name="payment-type" value="Cash" checked> Cash (Note: Cash must have the exact
             change!)<br>
-            <input  id="cashradio"type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card
+            <input id="cashradio" type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card
             <form id="billinginfo">
                 <section class="form-group row">
                     <div class="col-sm-4">
