--- a/ONtime/public_html/ProductDetails.html
+++ b/ONtime/public_html/ProductDetails.html
@@ -8,6 +8,9 @@ and open the template in the editor.
 
 <head>
     <title>Product Details</title>
+    <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
+    <meta name="keywords"
+        content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
