--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
     <meta charset="utf-8">
     <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
     <meta name="keywords"
-        content="Watches, Watch, Strap, Minute, Second, buy,buying New Arrivals, Gshock, Fossil, Tag Heuer">
+        content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/headerFooter.css" />
