--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -3,6 +3,9 @@
 
 <head>
     <title>Shopping Cart - OnTime</title>
+    <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
+    <meta name="keywords"
+        content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
