added css file to checkout page

--- a/ONtime/public_html/aboutus.html
+++ b/ONtime/public_html/aboutus.html
@@ -79,14 +79,14 @@ and open the template in the editor.
                 <!--Holzkern, 2019: Model 'Manhattan', last retrieved on 09/10/19 from https://www.bing.com/images/search?view=detailV2&ccid=%2BOFJ2a1a&id=745B387D8D27486FE1AD47FACA9E20C67C547165&thid=OIP.-OFJ2a1aZFcHIk0KkxyJ_AHaE7&mediaurl=https%3A%2F%2Fstatic.escdn.nl%2Fimages%2Fresized%2F975421%3A1059%3A705%3Acontain.jpg&exph=705&expw=1059&q=holzkern+watches&simid=607998756429302204&selectedindex=31&ajaxhist=0&vt=0&sim=11-->
             </div>
             <div class="col-lg-7" id="ourmission">
-                <h1>Our Mission</h1>
+                <h1 class="aboutus">Our Mission</h1>
                 <p>Founded in 2019, ONtime is one of the youngest corporations in Singapore.</p>
             </div>
         </section>
     </article>
 
     <section class="row" id="ourteam">
-        <h1>Our Team</h1>
+        <h1 class="aboutus">Our Team</h1>
         <p>Our current team consists of 4 highly motivated watch makers.
             If you'd like to know more about our members, click on the respective picture.</p>
         <article id="yeesiang" class="thumbnail col-md-3 col-sm-6" data-toggle="collapse" data-target="#yeesiangstext"
@@ -155,7 +155,7 @@ and open the template in the editor.
     <article class="container">
         <!--make location responsive-->
         <div class="row">
-            <h1>Store Location</h1>
+            <h1 class="aboutus">Store Location</h1>
             <p>Our store is located in Ang Mo Kio area, Singapore.</p>
             <section id="map-container-google-1" class="map-container col-md-6">
                 <iframe
