changed navbar image in checkout

--- a/ONtime/public_html/checkout.html
+++ b/ONtime/public_html/checkout.html
@@ -24,7 +24,7 @@
 
     <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
         <div id="topnav-centered">
-            <a class="navbar-brand" href="index.html"><img src="images\logo_clr.png" alt="Ontime logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"></a>
         </div>
 
         <section class="navbar-header">
