--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -8,8 +8,6 @@
         content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
-    <meta name="keywords" content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -24,164 +22,212 @@
     <script defer src="js\shoppingcartcheck.js"></script>
 </head>
 
-<body class="container">
-    <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
-        <div id="topnav-centered">
-            <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"
-                    style="width:150px;height:60px;" /></a>
-        </div>
+<body>
+    <section class="container">
+        <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
+            <div id="topnav-centered">
+                <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"
+                        style="width:150px;height:60px;" /></a>
+            </div>
 
-        <section class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </section>
+            <section class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </section>
 
-        <section class="collapse navbar-collapse container-fluid" id="myNavbar">
+            <section class="collapse navbar-collapse container-fluid" id="myNavbar">
 
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="products.html#hot">Top selling</a></li>
-                        <li><a href="products.html#newarr">Newest</a></li>
-                        <li><a href="products.html">All</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
-                            class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
-                        <li><a href="customerservice.html#FAQ">Faq</a></li>
-                    </ul>
-                </li>
-                <li><a href="productsreview.html">Reviews</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-            </ul>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="products.html#hot">Top selling</a></li>
+                            <li><a href="products.html#newarr">Newest</a></li>
+                            <li><a href="products.html">All</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
+                            <li><a href="customerservice.html#FAQ">Faq</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="productsreview.html">Reviews</a></li>
+                    <li><a href="aboutus.html">About us</a></li>
+                </ul>
 
 
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-                <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
-        </section>
-    </nav>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a>
+                    </li>
+                    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </section>
+        </nav>
 
-    <header class="page-header">
-        <h1>Your shopping cart at ONtime</h1>
-    </header>
-    <section class="row">
-        <div class="col-md-12">
-            <h2>Your Shopping Cart contains:</h2>
-            <table class="table table-striped table-responsive">
-                <thead>
+        <header class="page-header">
+            <h1>Your shopping cart at ONtime</h1>
+        </header>
+        <section class="row">
+            <div class="col-md-12">
+                <h2>Your Shopping Cart contains:</h2>
+                <table class="table table-striped table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Quantity</th>
+                            <th>Price/piece</th>
+                            <th>Price</th>
+                            <th></th>
+                        </tr>
+                    </thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Quantity</th>
-                        <th>Price/piece</th>
-                        <th>Price</th>
-                        <th></th>
+                        <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
+                        <td>1</td>
+                        <td>40 SGD</td>
+                        <td>40 SGD</td>
+                        <td><button type="button" class="btn btn-danger btn-sm">Remove</button></td>
+                        <!--will remove one item from the shopping cart-->
                     </tr>
-                </thead>
-                <tr>
-                    <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
-                    <td>1</td>
-                    <td>40 SGD</td>
-                    <td>40 SGD</td>
-                    <td><button type="button" class="btn btn-danger btn-sm">Remove</button></td>
-                    <!--will remove one item from the shopping cart-->
-                </tr>
-                <tr>
-                    <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
-                    <td>2</td>
-                    <td>40 SGD</td>
-                    <td>80 SGD</td>
-                    <td><button type="button" class="btn btn-danger btn-sm">Remove</button></td>
-                    <!--will remove one item from the shopping cart-->
-                </tr>
-                <tfoot>
-                    <tr class="tfooter">
-                        <td></td>
-                        <td></td>
-                        <td id="pricetotal">Price total: </td>
-                        <td id="amounttotal">120 SGD</td>
-                        <td></td>
+                    <tr>
+                        <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
+                        <td>2</td>
+                        <td>40 SGD</td>
+                        <td>80 SGD</td>
+                        <td><button type="button" class="btn btn-danger btn-sm">Remove</button></td>
+                        <!--will remove one item from the shopping cart-->
                     </tr>
-                </tfoot>
-            </table>
-        </div>
-    </section>
+                    <tfoot>
+                        <tr class="tfooter">
+                            <td></td>
+                            <td></td>
+                            <td id="pricetotal">Price total: </td>
+                            <td id="amounttotal">120 SGD</td>
+                            <td></td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </section>
 
-    <section class="well well-sm row">
-        <h2>Delivery Address</h2>
-        <form id="deliveryinfo">
-            <section class="form-group row">
-                <div class="col-sm-4">
-                    <label for="ex1">Full Name</label>
-                    <input class="form-control" id="fname" type="text">
-                </div>
-                <div class="col-sm-4">
-                    <label for="ex2">Email Address</label>
-                    <input class="form-control" id="email" type="text">
-                </div>
-                <div class="col-sm-4">
-                    <label for="ex3">Phone number</label>
-                    <input class="form-control" id="phone" type="text">
-                </div>
-            </section>
-            <section class="form-group row">
-                <div class="col-sm-4">
-                    <label for="ex1">Street</label>
-                    <input class="form-control" id="street" type="text">
-                </div>
-                <div class="col-sm-4">
-                    <label for="ex2">Country Code</label>
-                    <input class="form-control" id="countrycode" type="text">
-                </div>
-                <div class="col-sm-4">
-                    <label for="ex3">Country</label>
-                    <input class="form-control" id="country" type="text">
-                </div>
-            </section>
-        </form>
-
-        <h2>Select Payment Type</h2>
-        <form>
-            <input type="radio" name="payment-type" value="Cash" checked> Cash (Note: Cash must have the exact
-            change!)<br>
-            <input id="cashradio" type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card
-            <form id="billinginfo">
+        <section class="well well-sm row">
+            <h2>Delivery Address</h2>
+            <form id="deliveryinfo">
                 <section class="form-group row">
                     <div class="col-sm-4">
-                        <label for="ex1">Name on Card</label>
-                        <input class="form-control" id="cardname" type="text">
+                        <label for="ex1">Full Name</label>
+                        <input class="form-control" id="fname" type="text">
                     </div>
                     <div class="col-sm-4">
-                        <label for="ex2">Card Number</label>
-                        <input class="form-control" id="cardnumber" type="text">
+                        <label for="ex2">Email Address</label>
+                        <input class="form-control" id="email" type="text">
                     </div>
-                    <div class="col-sm-2">
-                        <label for="ex3">Expiry Data</label>
-                        <input class="form-control" id="expdate" type="text">
+                    <div class="col-sm-4">
+                        <label for="ex3">Phone number</label>
+                        <input class="form-control" id="phone" type="text">
                     </div>
-                    <div class="col-sm-2">
-                        <label for="ex4">cvv</label>
-                        <input class="form-control" id="cvv" type="text">
+                </section>
+                <section class="form-group row">
+                    <div class="col-sm-4">
+                        <label for="ex1">Street</label>
+                        <input class="form-control" id="street" type="text">
+                    </div>
+                    <div class="col-sm-4">
+                        <label for="ex2">Country Code</label>
+                        <input class="form-control" id="countrycode" type="text">
+                    </div>
+                    <div class="col-sm-4">
+                        <label for="ex3">Country</label>
+                        <input class="form-control" id="country" type="text">
                     </div>
                 </section>
             </form>
-        </form>
+
+            <h2>Select Payment Type</h2>
+            <form>
+                <input type="radio" name="payment-type" value="Cash" checked> Cash (Note: Cash must have the exact
+                change!)<br>
+                <input id="cashradio" type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card
+                <form id="billinginfo">
+                    <section class="form-group row">
+                        <div class="col-sm-4">
+                            <label for="ex1">Name on Card</label>
+                            <input class="form-control" id="cardname" type="text">
+                        </div>
+                        <div class="col-sm-4">
+                            <label for="ex2">Card Number</label>
+                            <input class="form-control" id="cardnumber" type="text">
+                        </div>
+                        <div class="col-sm-2">
+                            <label for="ex3">Expiry Data</label>
+                            <input class="form-control" id="expdate" type="text">
+                        </div>
+                        <div class="col-sm-2">
+                            <label for="ex4">cvv</label>
+                            <input class="form-control" id="cvv" type="text">
+                        </div>
+                    </section>
+                </form>
+            </form>
+        </section>
+
+        <div id="checkoutbutton" class="row">
+            <button type="button" class="btn btn-success btn-lg">
+                <a id="checkbutton" href="checkout.html">Purchase <span
+                        class="glyphicon glyphicon-arrow-right"></span></a>
+            </button>
+        </div>
     </section>
+    <br>
+    <footer class="footer">
+        <section class=container>
+            <section class="row">
+                <section class="col-md-4">
+                    <h1>Company</h1>
+                    <p>About Us</p>
+                    <p>Contact Us</p>
+                </section>
 
-    <div id="checkoutbutton" class="row">
-        <button type="button" class="btn btn-success btn-lg">
-            <a id="checkbutton" href="checkout.html">Purchase <span class="glyphicon glyphicon-arrow-right"></span></a>
-        </button>
-    </div>
+                <section class="col-md-4">
+                    <h1>Customer Support</h1>
+                    <a href="">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="">
+                        <p>Contact Us</p>
+                    </a>
+                    <a href="">
+                        <p>Customer Service</p>
+                    </a>
+                </section>
 
+                <section class="col-md-4">
+                    <h1>Follow Us On</h1>
+                    <a href="https://www.facebook.com/">
+                        <p><i class="fa fa-facebook-official"></i> Facebook</p>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <p><i class="fa fa-youtube-play"></i> Youtube</p>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <p><i class="fa fa-linkedin"></i> LinkedIn</p>
+                    </a>
+                    <a href="https://twitter.com/">
+                        <p><i class="fa fa-twitter"></i> Twitter</p>
+                    </a>
+                </section>
+
+            </section>
+            <hr />
+            <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
+        </section>
+    </footer>
 
 
 </body>
