--- a/ONtime/public_html/checkout.html
+++ b/ONtime/public_html/checkout.html
@@ -22,91 +22,141 @@
 
 </head>
 
-<body class="container">
+<body>
+    <section class="container">
+        <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
+            <div id="topnav-centered">
+                <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"
+                        style="width:150px;height:60px;" /></a>
+            </div>
 
-    <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
-        <div id="topnav-centered">
-            <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"></a>
-        </div>
+            <section class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </section>
 
-        <section class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </section>
+            <section class="collapse navbar-collapse container-fluid" id="myNavbar">
 
-        <section class="collapse navbar-collapse" id="myNavbar">
-
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="products.html#hot">Top selling</a></li>
-                        <li><a href="products.html#newarr">Newest</a></li>
-                        <li><a href="products.html">All</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
-                            class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
-                        <li><a href="customerservice.html#FAQ">Faq</a></li>
-                    </ul>
-                </li>
-                <li><a href="productsreview.html">Reviews</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-            </ul>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="products.html#hot">Top selling</a></li>
+                            <li><a href="products.html#newarr">Newest</a></li>
+                            <li><a href="products.html">All</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
+                            <li><a href="customerservice.html#FAQ">Faq</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="productsreview.html">Reviews</a></li>
+                    <li><a href="aboutus.html">About us</a></li>
+                </ul>
 
 
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
-        </section>
-    </nav>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a>
+                    </li>
+                    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </section>
+        </nav>
 
-    <header class="page-header">
-        <h1>Thank you for your purchase at ONtime.</h1>
-    </header>
+        <header class="page-header">
+            <h1>Thank you for your purchase at ONtime.</h1>
+        </header>
 
-    <p>You will receive further updates regarding your order via email.</p>
-    <p>We'd like to provide the best service to you. Feel free to <a href="customerservice.html">contact us</a>
-        if you have any questions.</p>
+        <p>You will receive further updates regarding your order via email.</p>
+        <p>We'd like to provide the best service to you. Feel free to <a href="customerservice.html">contact us</a>
+            if you have any questions.</p>
 
-    <h2>Your order at a glance</h2>
-    <table class="table table-striped table-responsive">
-        <thead>
+        <h2>Your order at a glance</h2>
+        <table class="table table-striped table-responsive">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
             <tr>
-                <th>Name</th>
-                <th>Quantity</th>
-                <th>Price</th>
+                <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
+                <td>1</td>
+                <td>40 SGD</td>
             </tr>
-        </thead>
-        <tr>
-            <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
-            <td>1</td>
-            <td>40 SGD</td>
-        </tr>
-        <tr>
-            <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
-            <td>2</td>
-            <td>80 SGD</td>
-        </tr>
-        <tfoot>
-            <tr class="tfooter">
-                <td></td>
-                <td id="pricetotal">Price total: </td>
-                <td id="amounttotal">120 SGD</td>
+            <tr>
+                <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
+                <td>2</td>
+                <td>80 SGD</td>
             </tr>
-        </tfoot>
-    </table>
-    <button type="button" class="btn btn-info btn-sm">
-        <a href="index.html">
-            Back to the main page
-        </a>
-    </button>
+            <tfoot>
+                <tr class="tfooter">
+                    <td></td>
+                    <td id="pricetotal">Price total: </td>
+                    <td id="amounttotal">120 SGD</td>
+                </tr>
+            </tfoot>
+        </table>
+        <button type="button" class="btn btn-info btn-sm">
+            <a href="index.html">
+                Back to the main page
+            </a>
+        </button>
+        <br>
+    </section>
+    <footer class="footer">
+        <section class=container>
+            <section class="row">
+                <section class="col-md-4">
+                    <h1>Company</h1>
+                    <p>About Us</p>
+                    <p>Contact Us</p>
+                </section>
+
+                <section class="col-md-4">
+                    <h1>Customer Support</h1>
+                    <a href="">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="">
+                        <p>Contact Us</p>
+                    </a>
+                    <a href="">
+                        <p>Customer Service</p>
+                    </a>
+                </section>
+
+                <section class="col-md-4">
+                    <h1>Follow Us On</h1>
+                    <a href="https://www.facebook.com/">
+                        <p><i class="fa fa-facebook-official"></i> Facebook</p>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <p><i class="fa fa-youtube-play"></i> Youtube</p>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <p><i class="fa fa-linkedin"></i> LinkedIn</p>
+                    </a>
+                    <a href="https://twitter.com/">
+                        <p><i class="fa fa-twitter"></i> Twitter</p>
+                    </a>
+                </section>
+
+            </section>
+            <hr />
+            <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
+        </section>
+    </footer>
+
 </body>
 
 </html>
