--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -223,7 +223,7 @@ and open the template in the editor.
                 you watches that you will love wearing all the time so that you can always be ONtime</h2>
             <div class="col-md-4"></div>
         </div>
-    </div>
+    </section>
 
     <footer class = "footer">
         <div class =container>
