--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
 
 <head>
-    <title>ONtime Main Page</title>
+    <title>Main Page - OnTime</title>
     <meta charset="utf-8">
     <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
     <meta name="keywords"
