--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Watch us ONtime</title>
+    <title>Customer Service - OnTime</title>
     <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
     <meta name="keywords"
         content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
