--- a/ONtime/public_html/login.html
+++ b/ONtime/public_html/login.html
@@ -61,7 +61,8 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                    <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a>
+                    </li>
                     <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </section>
@@ -118,32 +119,49 @@
         </div>
     </main>
 
-    <footer class = "footer">
-        <div class =container>
-            <div class = "row">
-                <div class = "col-md-4">
+    <footer class="footer">
+        <div class=container>
+            <div class="row">
+                <div class="col-md-4">
                     <h1>Company</h1>
-                    <a href=""><p>About Us</p></a>
-                    <a href=""><p>Contact Us</p></a>
+                    <a href="aboutus.html">
+                        <p>About Us</p>
+                    </a>
+                    <p>Contact Us</p>
+                    </section>
+                    <section class="col-md-4">
+                        <h1>Customer Support</h1>
+                        <a href="customerservice.html#FAQ">
+                            <p>FAQ</p>
+                        </a>
+                        <a href="">
+                            <p>Contact Us</p>
+                        </a>
+                        <a href="customerservice.html">
+                            <a href="">
+                                <p>Customer Service</p>
+                            </a>
                 </div>
-                                
-                <div class = "col-md-4">
-                    <h1>Customer Support</h1>
-                    <a href="customerservice.html#FAQ"><p>FAQ</p></a>   
-                    <a href=""><p>Customer Service</p></a>
-                 </div>
-                                
-                 <div class = "col-md-4">
+                <div class="col-md-4">
                     <h1>Follow Us On</h1>
-                    <a href="https://www.facebook.com/"><p><i class="fa fa-facebook-official"></i> Facebook</p></a>
-                    <a href="https://www.youtube.com/"><p><i class="fa fa-youtube-play"></i> Youtube</p></a>
-                    <a href="https://www.linkedin.com/"><p><i class="fa fa-linkedin"></i> LinkedIn</p></a>
-                    <a href="https://twitter.com/"><p><i class="fa fa-twitter"></i> Twitter</p></a>
+                    <a href="https://www.facebook.com/">
+                        <p><i class="fa fa-facebook-official"></i> Facebook</p>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <p><i class="fa fa-youtube-play"></i> Youtube</p>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <p><i class="fa fa-linkedin"></i> LinkedIn</p>
+                    </a>
+                    <a href="https://twitter.com/">
+                        <p><i class="fa fa-twitter"></i> Twitter</p>
+                    </a>
                 </div>
             </div>
-            <hr/>
+            <hr />
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
-        </div>    
-    </footer>              
+        </div>
+    </footer>
 </body>
+
 </html>
