--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -190,19 +190,21 @@
             <section class="row">
                 <section class="col-md-4">
                     <h1>Company</h1>
-                    <p>About Us</p>
+                    <a href="aboutus.html">
+                        <p>About Us</p>
+                    </a>
                     <p>Contact Us</p>
                 </section>
 
                 <section class="col-md-4">
                     <h1>Customer Support</h1>
-                    <a href="">
+                    <a href="customerservice.html#FAQ">
                         <p>FAQ</p>
                     </a>
                     <a href="">
                         <p>Contact Us</p>
                     </a>
-                    <a href="">
+                    <a href="customerservice.html">
                         <p>Customer Service</p>
                     </a>
                 </section>
