--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -219,9 +219,8 @@ and open the template in the editor.
         <h1>WATCH US</h1>
         <div class="container-fluid">
             <div class="col-md-4"></div>
-            <h2 class="col-md-4">Watch us as we bring you amazing wathes with stunning designs. We try our best at
-                bringing
-                you watches that you will love wearing all the time so that you can always be ONtime</h2>
+            <h2 class="col-md-4">Watch us as we bring you amazing watches with stunning designs. We try our best at
+                bringing you watches that you will love wearing all the time so that you can always be ONtime</h2>
             <div class="col-md-4"></div>
         </div>
     </section>
